--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,115 @@
 }
 html {
   scroll-behavior: smooth;
+  background-color: #edeae3;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+}
+a {
+  text-decoration: none;
+  color: #333;
+}
+header {
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 85px;
+}
+nav ul {
+  list-style: none;
+  display: flex;
+  width: 40%;
+  align-items: center;
+  justify-content: space-between;
+}
+nav ul li {
+  width: 100%;
+  text-align: center;
+}
+nav ul li a {
+  font-size: 1.2rem;
+}
+nav ul li a:hover {
+  color: #b1414d;
+}
+.languages {
+  width: 10%;
+}
+main {
+  /* margin-top: 85px; */
+}
+.container {
+  /* max-width: 1441px; */
+  width: 95%;
+  margin: 0 auto;
+}
+#who-us {
+  width: 100%;
+  height: 100vh;
+  background-image: url("../images/sectionone.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#who-us .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+  position: relative;
+}
+#who-us .container .log-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
+}
+#who-us .container .log-container .welcom {
+  height: 30%;
+}
+
+#who-us .container h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 82.93px;
+  text-align: right;
+  color: #b1414d;
+}
+
+#who-us .container .arabic-man-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 42.5%;
+}
+#who-us .container .arabic-man-container img {
+  width: 100%;
+  height: 100%;
+}
+#who-us .container .line {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
