--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ nav {
   width: 95%;
   margin-left: auto;
   margin-right: auto;
-  height: 85px;
+  height: 80px;
 }
 nav ul {
   list-style: none;
@@ -52,68 +52,73 @@ nav ul li a:hover {
 .languages {
   width: 10%;
 }
-main {
-  /* margin-top: 85px; */
-}
+
 .container {
-  /* max-width: 1441px; */
-  width: 95%;
+  max-width: 1441px;
+  height: 100%;
   margin: 0 auto;
 }
-#who-us {
-  width: 100%;
-  height: 100vh;
-  background-image: url("../images/sectionone.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+
 #who-us .container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  background-image: url("../images/sectionone.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   align-items: center;
-  height: 100%;
-  position: relative;
 }
 #who-us .container .log-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100%;
+  margin-top: 5%;
+  margin-bottom: 3%;
+  height: 50%;
 }
-#who-us .container .log-container .welcom {
+/* #who-us .container .log-container .welcom {
   height: 30%;
-}
+  position: absolute;
+} */
 
 #who-us .container h1 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 700;
   line-height: 82.93px;
   text-align: right;
   color: #b1414d;
+  white-space: nowrap;
 }
 
 #who-us .container .arabic-man-container {
+  width: 50%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: auto;
-  position: absolute;
-  top: 50%;
-  left: 42.5%;
+  position: relative;
 }
+#who-us .container .arabic-man-container .welcom {
+  text-align: center;
+  height: 30%;
+  position: absolute;
+  top: -10%;
+  z-index: 1;
+}
+
 #who-us .container .arabic-man-container img {
-  width: 100%;
-  height: 100%;
+  z-index: 2;
 }
 #who-us .container .line {
   width: 100%;
-  position: absolute;
-  bottom: 0;
+}
+#creativity .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+  background-color: #b1414d;
 }
