--- a/css/style.css
+++ b/css/style.css
@@ -325,11 +325,93 @@ nav ul li a:hover {
 #team .container .line {
   width: 100%;
 }
-#servies {
-  height: 100vh;
+
+#servies .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #b1414d;
   justify-content: center;
+  position: relative;
+}
+#servies .servies-title {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  color: #f2efe8;
+  position: relative;
+}
+#servies .servies-title h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 82.93px;
+  text-align: center;
+  color: #f2efe8;
+  white-space: nowrap;
+  text-align: center;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+#servies .container .servies-title .circle-5 {
+  width: 10px;
+  height: 10px;
+  background-color: #f2efe8;
+  border-radius: 50%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+#servies .servies-title .circle3::before {
+  content: "";
+  width: 38.5%;
+  background-color: #f2efe8;
+  height: 5px;
+  display: block;
+  top: 48%;
+  right: 0%;
+  position: absolute;
+  overflow: hidden;
+}
+#servies .servies-title .circle4::before {
+  content: "";
+  width: 38.5%;
+  background-color: #f2efe8;
+  height: 5px;
+  display: block;
+  top: 48%;
+  left: 0%;
+  position: absolute;
+  overflow: hidden;
+}
+#servies .container .box-serves {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 2.5%;
+  align-items: center;
+  width: 30%;
+  border: 1px solid #f2efe8;
+}
+#servies .container .box-serves p {
+  width: 100%;
+  height: 100%;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 33px;
+  text-align: center;
+  color: #f2efe8;
+}
+#servies .container .serves-images {
+  width: 70%;
+  height: 30%;
+  margin-bottom: 2.5%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+#servies .container .box-serves .serves-images img {
+  width: 50%;
+  height: 100%;
 }
