--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ nav ul li a:hover {
 }
 
 .container {
-  max-width: 1441px;
+  /* max-width: 1441px; */
   height: 100%;
   margin: 0 auto;
 }
@@ -414,4 +414,7 @@ nav ul li a:hover {
 #servies .container .box-serves .serves-images img {
   width: 50%;
   height: 100%;
+}
+#servies .container .line {
+  width: 100%;
 }
