--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ nav ul li a:hover {
   background-repeat: no-repeat;
   background-position: center;
   align-items: center;
+  overflow: hidden;
 }
 #home .container .log-container {
   display: flex;
@@ -121,6 +122,7 @@ nav ul li a:hover {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  overflow: hidden;
 }
 #who-us .container .who-us-text {
   display: flex;
@@ -214,12 +216,12 @@ nav ul li a:hover {
 }
 #creativity .container .circle1::before {
   content: "";
-  width: 4000%;
+  width: 300%;
   background-color: #b1414d;
   height: 5px;
   display: block;
   top: 25%;
-  left: 90%;
+  right: 10%;
   position: absolute;
   overflow: hidden;
 }
@@ -269,7 +271,7 @@ nav ul li a:hover {
 #creativity .container .boxs .box p {
   width: 100%;
   font-size: 1.2rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 33px;
   text-align: right;
 }
@@ -318,7 +320,13 @@ nav ul li a:hover {
   color: #b1414d;
   white-space: nowrap;
 }
-#team .container img {
+#team .container .team-img {
+  width: 80%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+#team .container .team-img img {
   width: 100%;
   height: 100%;
 }
@@ -333,17 +341,19 @@ nav ul li a:hover {
   background-color: #b1414d;
   justify-content: center;
   position: relative;
+  overflow: hidden;
 }
 #servies .servies-title {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   overflow: hidden;
   color: #f2efe8;
   position: relative;
 }
 #servies .servies-title h1 {
+  width: 30%;
   font-size: 4rem;
   font-weight: 700;
   line-height: 82.93px;
@@ -355,35 +365,8 @@ nav ul li a:hover {
   margin-bottom: 3%;
 }
 
-#servies .container .servies-title .circle-5 {
-  width: 10px;
-  height: 10px;
-  background-color: #f2efe8;
-  border-radius: 50%;
-  margin-left: 5%;
-  margin-right: 5%;
-}
-#servies .servies-title .circle3::before {
-  content: "";
-  width: 38.5%;
-  background-color: #f2efe8;
-  height: 5px;
-  display: block;
-  top: 48%;
-  right: 0%;
-  position: absolute;
-  overflow: hidden;
-}
-#servies .servies-title .circle4::before {
-  content: "";
-  width: 38.5%;
-  background-color: #f2efe8;
-  height: 5px;
-  display: block;
-  top: 48%;
-  left: 0%;
-  position: absolute;
-  overflow: hidden;
+#servies .servies-title .right {
+  width: 32.5%;
 }
 #servies .container .box-serves {
   display: flex;
@@ -392,6 +375,48 @@ nav ul li a:hover {
   align-items: center;
   width: 30%;
   border: 1px solid #f2efe8;
+  position: relative;
+}
+#servies .container .box-serves .digital-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  background-color: #b1414d;
+  position: absolute;
+  top: -10.5%;
+  left: 25%;
+}
+#servies .container .box-serves-p {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #f2efe8;
+  font-weight: 400;
+  text-align: right;
+}
+#servies .container .box-serves-p p {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0.5%;
+  font-size: 1.4rem;
+  background-color: #bf2732;
+}
+
+#servies .container .box-serves h4 {
+  width: 80%;
+  color: #f2efe8;
+  background-color: #bf2732;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 #servies .container .box-serves p {
   width: 100%;
@@ -407,12 +432,20 @@ nav ul li a:hover {
   height: 30%;
   margin-bottom: 2.5%;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
 }
+#servies .container .serves-images .img-container {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #servies .container .box-serves .serves-images img {
-  width: 50%;
+  width: 100%;
   height: 100%;
 }
 #servies .container .line {
