--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,7 @@ nav ul li a:hover {
   justify-content: space-evenly;
   padding: 2.5%;
   align-items: center;
-  width: 30%;
+  width: 40%;
   border: 1px solid #f2efe8;
   position: relative;
 }
@@ -408,8 +408,20 @@ nav ul li a:hover {
   padding: 0.5%;
   font-size: 1.4rem;
   background-color: #bf2732;
+  border-top-right-radius: 30.71px;
+  position: relative;
 }
+#servies .container .box-serves-p p::before {
+  content: "";
+  position: absolute;
+  top: 30%;
+  right: -5%;
+  border-width: 0.8rem;
+  border-style: solid;
+  border-color: transparent #f2efe8 transparent transparent;
 
+  /* border-color: transparent transparent transparent rgba(211, 211, 211, 0); */
+}
 #servies .container .box-serves h4 {
   width: 80%;
   color: #f2efe8;
@@ -418,6 +430,7 @@ nav ul li a:hover {
   font-size: 1.5rem;
   font-weight: 500;
 }
+
 #servies .container .box-serves p {
   width: 100%;
   height: 100%;
