Finish servies section

--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,7 @@ nav ul li a:hover {
   align-items: center;
   padding: 0.5%;
   font-size: 1.4rem;
-  background-color: #bf2732;
+  background-color: #7e181e;
   border-top-right-radius: 30.71px;
   position: relative;
 }
@@ -424,7 +424,7 @@ nav ul li a:hover {
 #servies .container .box-serves h4 {
   width: 80%;
   color: #f2efe8;
-  background-color: #bf2732;
+  background-color: #7e181e;
   text-align: center;
   font-size: 1.5rem;
   font-weight: 500;
@@ -461,5 +461,150 @@ nav ul li a:hover {
   height: 100%;
 }
 #servies .container .line {
+  width: 100%;
+}
+#media {
+  /* height: 100vh; */
+  overflow: hidden;
+}
+
+#media .container {
+  display: flex;
+  flex-direction: column;
+}
+#media .container .container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #b1414d;
+  justify-content: center;
+  position: relative;
+}
+#media .container .media-container {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 60%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+#media .container .lamp-container {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#media .container .lamp-container img {
+  width: 50%;
+}
+#media .container .box-media {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 5%;
+  align-items: center;
+  width: 80%;
+  height: 50%;
+  border: 1px solid #f2efe8;
+  color: #f2efe8;
+  text-align: center;
+  position: relative;
+}
+#media .container .box-media .creative-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  background-color: #b1414d;
+  position: absolute;
+  top: -10.5%;
+  left: 25%;
+  color: #f2efe8;
+}
+#media .container .box-media p {
+  width: 100%;
+  height: 100%;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 33px;
+  text-align: center;
+  color: #f2efe8;
+}
+
+#media .container .box-media-p {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  width: 70%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #f2efe8;
+  font-weight: 400;
+  text-align: right;
+  /* margin-top: 5%; */
+}
+
+#media .container .box-media-p p {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5%;
+  font-size: 1.4rem;
+  background-color: #7e181e;
+  border-top-right-radius: 30.71px;
+  margin-bottom: 5%;
+
+  position: relative;
+}
+
+#media .container .box-media-p p::before {
+  content: "";
+  position: absolute;
+  top: 30%;
+  right: -5%;
+  border-width: 0.8rem;
+  border-style: solid;
+  border-color: transparent #f2efe8 transparent transparent;
+}
+#media .container .box-media h4 {
+  width: 80%;
+  color: #f2efe8;
+  background-color: #7e181e;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+#media .container .content-box p {
+  width: 100%;
+  height: 100%;
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 33px;
+  text-align: center;
+  color: #f2efe8;
+}
+#media .container .images {
+  width: 100%;
+  position: relative;
+  /* position: absolute; */
+  /* right: 0; */
+  /* bottom: -50%; */
+}
+#media .container .images img {
+  width: 100%;
+  height: 100%;
+}
+#media .container .images .cross-line-left {
+  position: absolute;
+  z-index: 1000;
+  top: 0;
   width: 100%;
 }
